--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -5,11 +5,15 @@ body{
 .splashImg{
     display: inline-block;
     background-image: url("../public/Screen\ Shot\ 2021-11-15\ at\ 6.11.24\ PM.png");
-    background-size: 110%;
+    background-size: 454px 618px;
     width: 350px;
-    height:700px;
+    height:618px;
+    flex-basis: 454px;
     background-repeat: no-repeat;
     background-position: center;
+    align-self: center;
+    margin-left: -35px;
+    margin-right:-15px;
 }
 
 .splash-page{
