--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -31,6 +31,14 @@ body{
 .login{
   -webkit-box-align: center;
   align-items:center;
+  align-self: center;
   background-color: rgba(var(--d87,255,255,255),1);
+  border: 1px solid rgba(var(--b6a,219,219,219),1);
+  border-radius: 1px;
+  margin: 0 0 10px;
+  padding:10px 0;
+  max-width: 300px;
+  width: 300px;
+  height: 450px;
 
 }
