--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -69,7 +69,7 @@ input:focus{
   padding:10px 0;
   max-width: 300px;
   width: 300px;
-  height: 450px;
+  height: 325px;
   text-align: center;
 
 }
@@ -142,9 +142,15 @@ input:focus{
     display: inline;
     font-size: 16px;
     color: #5562f3;
+    text-decoration: none;
+    font-weight: 400;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+.register:hover{
+    color: #0014f5;
+}
+
 .registerContainer{
-    margin-top: 175px;
+    margin-top: 50px;
 }
