--- a/react-app/src/components/Header/header.css
+++ b/react-app/src/components/Header/header.css
@@ -1,87 +1,84 @@
 @import url('//fonts.cdnfonts.com/css/billabong');
 
 
+.navBar {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    position: fixed;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    background-color: white;
+    height: 50px;
+    width: 100%;
+    border-bottom: 2px solid rgba(0, 0, 0, .05);
+    padding: 0px 40px;
+    z-index: 1;
+}
+
 #home{
     margin-left: 30px;
-    color: black;
+    font-size: 20px;
     text-decoration: none;
-    font-size: 22px;
+    color: black;
 }
 
 
 #upload{
     margin-left: 30px;
-    color: black;
+    font-size: 20px;
     text-decoration: none;
-    font-size: 22px;
+    color: black;
 }
 
 
 #profile{
     margin-left: 30px;
-    color: black;
+    font-size: 20px;
     text-decoration: none;
-    font-size: 22px;
+    color: black;
 }
 
 #logout{
     margin-left: 30px;
-    color: black;
+    font-size: 20px;
     text-decoration: none;
-    font-size: 22px;
+    color: black;
 }
 
-.navigation {
-  background-color: #ffffff;
-  height: 80px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 0px 50px;
-  box-sizing: border-box;
-  z-index: 2;
-  /* animation magic */
-  transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
+.rightNav {
+    display: flex;
 }
 
-.navigation .logo a {
-  position: relative;
-  color: #000000;
-  font-size: 30px;
+.navSearch {
+    position: relative;
+}
+
+  .navSearch input {
+    font-size: 14px;
+    background-color: white;
+    height: 30px;
+    padding: 3px 20px;
+    padding-left: 25px;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.07);
+    border-radius: 2px;
+}
+
+  .navSearch .fa-search {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 11px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+
+.navBar .logo a {
   font-family: "billabong", sans-serif;
-  text-decoration: none;
-}
-
-.navigation-search-container {
   position: relative;
-}
-
-.navigation-search-container input {
-  background-color: #fafafa;
-  padding: 3px 20px;
-  padding-left: 25px;
-  height: 30px;
-  box-sizing: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.0975);
-  border-radius: 3px;
-  font-size: 14px;
-}
-
-.navigation-search-container .fa-search {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 11px;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.navigation-icons {
-  display: flex;
+  font-size: 27px;
+  color: #000000;
+  text-decoration: none;
 }
