--- a/react-app/src/components/NewPost/newPost.css
+++ b/react-app/src/components/NewPost/newPost.css
@@ -2,6 +2,7 @@ form {
     display: flex;
     justify-content: left;
     flex-direction: column;
+
   }
 
   div {
@@ -24,6 +25,7 @@ form {
     display: flex;
     justify-content: right;
     align-items: right;
+    padding-top: 100px;
   }
 
   button {
