--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -1,17 +1,125 @@
 .postContainer{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    width: 614px;
+    height: 100%;
+    margin: 1.5rem 1rem 0.25rem;
+    border: 1px solid #DBDBDB;
+    border-radius: 2.5px;
+    /* max-height: 800px; */
+    min-height: 250px;
+    background-color: white;
 }
 
 .post{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    width: 614px;
+    height: 100%;
+    margin: 1.5rem 1rem 0.25rem;
+    border: 1px solid #DBDBDB;
+    border-radius: 2.5px;
+    /* max-height: 800px; */
+    min-height: 250px;
+    background-color: white;
+
+}
+
+.post > img{
+    width: 100%;
+    height: 100%;
+    max-height: 785px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.postCaption{
+    display: flex;
+    gap: 5px;
+    padding: 0 0 0 20px;
+    font-size: 14px;
+}
+
+
+.commentContainer{
+    width: 80%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
+
+.addComment{
+    min-height: 40px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    max-height: max-content;
+    margin-top: 15px;
+}
+
+.addComment input{
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.addComment textarea{
+    flex-grow: 1;
+    resize: none;
+    width: 100%;
+    border: none;
+    height: 40px;
+    border-top: 1px solid rgba(0, 0, 0, 0.075);
+    box-sizing: border-box;
+    padding: 10px 12.5px;
+    max-height: max-content;
+}
+
+
+.addComment button{
+    height: 40px;
+    position: absolute;
+    right: 12.5px;
+    background-color: transparent;
+    border: none;
+    font-weight: 500;
+    color: rgba(0, 149, 246, 0.3);
+}
+
+
+.addComment textarea::-webkit-scrollbar {
+    display: none;
+}
+
+
+.addComment textarea:focus-visible {
+    outline: none;
+}
+
+.addComment textarea:focus-visible ~ button {
+    outline: none;
+    color: #0095f6;
+    cursor: pointer;
+}
+
+.comments{
+    display: flex;
+    align-items: center;
+    transition: background-color 0.2s;
+    justify-content: space-between;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    padding: 2.5px 0;
+}
+
+.comments:hover{
+    background: rgba(0, 0, 0, .05);
+}
+.comment{
+    padding-left: 20px ;
+    display: flex;
+    gap: 5px;
 }
