--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -3,20 +3,15 @@
 }
 
 .postContainer{
+    padding: 90px 10px 0px 10px;
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    margin-top: 70px;
+    width: 1025px;
+    margin: 0 auto;
+    max-width: 100%;
 }
 
-.post{
-
-    border: 1px solid #83838360;
-    height: fit-content;
-    margin-bottom: 30px;
-    border-radius: 2px;
-
-}
 
 .post > img{
     width: 100%;
@@ -27,10 +22,8 @@
 }
 
 .postCaption{
-    display: flex;
-    gap: 5px;
-    padding: 0 0 0 20px;
-    font-size: 14px;
+    margin: 0 15px;
+    font-weight: bold;
 }
 
 
@@ -113,4 +106,9 @@
     padding-left: 20px ;
     display: flex;
     gap: 5px;
+}
+
+.commentBtn{
+ display:flex;
+justify-content: flex-end;
 }
