--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -47,3 +47,31 @@
     width: 850px;
 
 }
+
+.postHeader{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: -20px;
+}
+
+.profileImage{
+    border: 1px solid #D4D4D4;
+    width: 40px;
+    height: 40px;
+    border-radius: 60%;
+    display: inline-block;
+    margin-left: 13px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.postUsername{
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: top;
+    font-weight: 500;
+    font-size: 15px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
