--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -37,10 +37,17 @@
     margin-top: -17px;
 }
 
-.postDeleteBtn{
+
+.postBtn{
     display: flex;
-    float: right;
-    margin-top: -55px;
+    margin-left: 35px;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    cursor: pointer;
+}
+.postDeleteBtn{
+    margin-left: 10px;
+
 }
 
 .addComment{
@@ -52,7 +59,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
 }
 
 .profileImage{
@@ -65,20 +72,28 @@
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    margin-right: 20px;
 }
 
 .postUsername{
     display: inline-block;
-    margin-left: 10px;
     vertical-align: top;
     font-weight: 500;
     font-size: 15px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.postUser{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
 .commentBtn{
+    display: inline-flex;
+    position: relative;
+    float: right;
     cursor: pointer;
 }
 
-.commentDeleteBtn{
-    cursor: pointer;
+.comments{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
