--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -10,8 +10,18 @@
 .commentContainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 700px;
+    max-width: 100%;
     justify-content: center;
+    align-items: center;
+
+}
+.post{
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+
 }
 
 .post > img{
@@ -94,6 +104,22 @@
     cursor: pointer;
 }
 
+
+.comment{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: normal;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .comments{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 10px;
+}
+
+
+.commentUser{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
 }
