--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -60,10 +60,6 @@
 
 }
 
-.addComment{
-    width: 850px;
-
-}
 
 .postHeader{
     display: flex;
@@ -123,3 +119,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
 }
+
+.addComment{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
