--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -4,47 +4,28 @@
     align-items: center;
     justify-content: center;
     margin-top: 75px;
-
 }
 
-.commentContainer{
-    display: flex;
-    flex-direction: column;
-    width: 700px;
-    max-width: 100%;
-    justify-content: center;
-    align-items: center;
-
-}
 .post{
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    width: 700px;
+   width: 100%;
+   height: auto;
+   background: #fff;
+   border: 1px solid #dfdfdf;
+   margin-top: 40px;
 
 }
 
 .post > img{
-    border: 1px solid #D4D4D4;
-    display: block;
-    width: 700px;
-    height: 826px;
-    border-radius: 5px;
-    margin-bottom: 40px;
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.likes{
-    display: flex;
-    margin-top: -35px;
+width: 100%;
+height: 500px;
+object-fit: contain;
 }
 
 .postCaption{
-    display: flex;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 14px;
-    margin-top: -17px;
+   margin:10px 0;
+   font-size: 14px;
+   line-height: 20px;
+
 }
 
 
@@ -93,7 +74,17 @@
 }
 
 
-.commentBtn{
+.commentContainer{
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+
+} 
+
+ .commentBtn{
     display: inline-flex;
     position: relative;
     float: right;
@@ -126,4 +117,3 @@
     align-items: center;
     justify-content: center;
 }
-
