--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -16,29 +16,38 @@
 }
 
 .post > img{
-width: 100%;
-height: 600px;
-object-fit: contain;
-
+    width: 100%;
+    height: 600px;
+    object-fit: contain;
 }
 
 .postCaption{
-   margin:10px 0;
+   margin-top: -15px;
+   margin-bottom: 10px ;
    font-size: 14px;
-   line-height: 20px;
-
 }
 
 
 .postBtn{
     display: flex;
-    margin-left: 35px;
-    justify-content: space-evenly;
-    align-content: space-evenly;
+    flex-direction: row;
+    display: inline-flex;
+    position: relative;
+    float: right;
+    margin-bottom: -20px;
+    margin-top: -50px;
     cursor: pointer;
 }
+
 .postDeleteBtn{
     margin-left: 10px;
+}
+
+.postEditBtn{
+    display: flex;
+    position: relative;
+    float: center;
+    flex-direction: row;
 
 }
 
@@ -106,6 +115,7 @@ object-fit: contain;
     margin-left: 10px;
     justify-content: center;
     align-items: center;
+    margin-top: 5px;
 }
 
 
