--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -59,6 +59,12 @@ input:focus{
     font-family: cursive;
 }
 
+.appTagline{
+    margin: 22px auto 12px ;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: -20px;
+}
+
 .login{
   align-items:center;
   align-self: center;
@@ -69,8 +75,10 @@ input:focus{
   padding:10px 0;
   max-width: 300px;
   width: 300px;
-  height: 325px;
+  height: 400px;
   text-align: center;
+
+
 
 }
 
@@ -152,5 +160,5 @@ input:focus{
 }
 
 .registerContainer{
-    margin-top: 50px;
+    margin-top: 80px;
 }
