--- a/react-app/src/components/auth/signupForm.css
+++ b/react-app/src/components/auth/signupForm.css
@@ -1,50 +1,3 @@
-.userSignup{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #f5f5f5;
-    padding: 20px;
-}
-
-.passwordSignup{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #f5f5f5;
-    padding: 20px;
-}
-
-.submitSignupdiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align:center;
-}
-
-.submitSignup{
-    padding: .2em 1.45em;
-    border: .15em solid #cccccc;
-    text-decoration: none;
-    font-family:'Segoe UI','Roboto',sans-serif;
-    width: 15%;
-}
-
-.submitSignup:hover{
-    background-color: #7a7a7a;
-}
-
-.submitSignup:active{
-    background-color: #999999;
-}
-
-
 
 .signupErrors{
     display: flex;
@@ -53,13 +6,22 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #f5f5f5;
-    padding: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bolder;
+
 }
 
 
-.formBody{
-    background-color: #f5f5f5;
+.passwordInputRepeat{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.signupInputs{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
