--- a/react-app/src/components/Splash/splash.css
+++ b/react-app/src/components/Splash/splash.css
@@ -75,10 +75,8 @@ input:focus{
   padding:10px 0;
   max-width: 300px;
   width: 300px;
-  height: 400px;
+  min-height: 400px;
   text-align: center;
-
-
 
 }
 
