--- a/react-app/src/components/Posts/post.css
+++ b/react-app/src/components/Posts/post.css
@@ -133,3 +133,13 @@
 margin-top: -50px;
 
 }
+
+
+.postLike{
+    box-sizing: border-box;
+    margin-bottom: 75px;
+    height: 5px;
+    width: 5px;
+    margin-top: -35px;
+    margin-left: -35px;
+}
